tests/negative/test_attr_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    eval (sym f:Foo);
    sym (x 0::((abcd f)));
};